--- a/accounting-service/src/main/resources/application.properties
+++ b/accounting-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.sql.init.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5555/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
