--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,33 @@
 version: "2.4"
 
 services:
- accounting_service_postgres:
-  container_name: accounting_service_postgres_database
-  image: postgres
-  ports:
-   - 5555:5432
-     #  volumes:
-     #   - ./postgres-data/:/var/lib/postgresql/data
-  restart: unless-stopped
-  environment:
-   POSTGRES_USER: postgres
-   POSTGRES_PASSWORD: password
-   POSTGRES_DB: postgres
- adminer:
-  container_name: postgres_adminer
-  image: adminer
-  restart: always
-  ports:
-   - 8086:8080
+    accounting_service_postgres:
+        container_name: accounting_service_postgres_database
+        image: postgres
+        ports:
+            - 5555:5432
+#       volumes:
+#           - ./postgres-data/accounting-service/:/var/lib/postgresql/data
+        restart: unless-stopped
+        environment:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: password
+            POSTGRES_DB: postgres
+    organization_service_postgres:
+        container_name: organization_service_postgres_database
+        image: postgres
+        ports:
+            - 4444:5432
+#       volumes:
+#           - ./postgres-data/organization-service/:/var/lib/postgresql/data
+        restart: unless-stopped
+        environment:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: password
+            POSTGRES_DB: postgres
+    adminer:
+        container_name: postgres_adminer
+        image: adminer
+        restart: always
+        ports:
+            - 8086:8080
