implementation of docker for accounting-service

--- a/accounting-service/src/main/resources/application.properties
+++ b/accounting-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5555/postgres
+spring.datasource.url=jdbc:postgresql://accounting_service_postgres:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create
