--- a/organization-service/src/main/resources/application.properties
+++ b/organization-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:4444/postgres
+spring.datasource.url=jdbc:postgresql://organization_service_postgres:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create
