--- a/organization-service/src/main/resources/application.properties
+++ b/organization-service/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://organization_service_postgres:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
