--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
         image: postgres
         ports:
             - "5555:5432"
-#        volumes:
-#            - ./postgres-data/organization-service/data/:/var/lib/postgresql/data
+        volumes:
+            - ./postgres-data/organization-service/data/:/var/lib/postgresql/data
         restart: unless-stopped
         environment:
             POSTGRES_USER: postgres
