--- a/accounting-service/src/main/resources/application.properties
+++ b/accounting-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://accounting_service_postgres:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8081
