Create controller + add services for API

--- a/accounting-service/src/main/resources/application.properties
+++ b/accounting-service/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://accounting_service_postgres:5432/postgres
+spring.datasource.url=jdbc:postgresql://accounting-service-postgres:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8081
+api.organizationService.endpoint=http://organization-service:8080/api
+api.dateNager.endpoint=https://date.nager.at/api/v3
+api.dateNager.countryCode=cz
