Create scheduled task for PayExpense

--- a/accounting-service/src/main/resources/application.properties
+++ b/accounting-service/src/main/resources/application.properties
@@ -9,3 +9,4 @@ server.port=8081
 api.organizationService.endpoint=http://organization-service:8080/api
 api.dateNager.endpoint=https://date.nager.at/api/v3
 api.dateNager.countryCode=cz
+cron.expression.payexpense=0 * * * *
